--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <path d="M140,128a12,12,0,1,1-12-12A12,12,0,0,1,140,128ZM84,116a12,12,0,1,0,12,12A12,12,0,0,0,84,116Zm88,0a12,12,0,1,0,12,12A12,12,0,0,0,172,116Zm60,12A104,104,0,0,1,79.12,219.82L45.07,231.17a16,16,0,0,1-20.24-20.24l11.35-34.05A104,104,0,1,1,232,128Zm-16,0A88,88,0,1,0,51.81,172.06a8,8,0,0,1,.66,6.54L40,216,77.4,203.53a7.85,7.85,0,0,1,2.53-.42,8,8,0,0,1,4,1.08A88,88,0,0,0,216,128Z"></path>
     </svg>
     </div>
-    <p class="text-sm font-medium">Chat &amp; Goals</p>
+    <p class="text-sm font-medium">AI Assistant</p>
     </a>
     <a class="nav-item flex items-center gap-3 px-3 py-2.5 rounded-lg text-gray-700 hover:bg-gray-100" href="#">
     <div class="text-gray-600" data-icon="Gear" data-size="20px" data-weight="regular">
@@ -103,140 +103,152 @@
     <main class="main-content flex-1 flex overflow-hidden">
     <div class="flex-1 flex flex-col overflow-y-auto p-6 lg:p-8">
     <header class="mb-6 flex items-center justify-between">
-    <h1 class="text-gray-800 text-2xl font-bold">Project Phoenix Chat</h1>
+    <h1 class="text-gray-800 text-2xl font-bold">AI Assistant</h1>
     <div class="flex items-center gap-2">
-    <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-8" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAZK5BqXFj0XIURJWAmDy_DWNO-od3fd2_ZIWLhaCjL10rekD6v8FrOfJ8armJdZF4Xr8ypXnJjeTavcTLuq3y19tmtKC7iVdiTKn0ORMuUkHZAbe5mAYmlUyuUXDt1Dh90ce5vvcb4dNM6I6KFkkQYJNWP2ttK4anGs68znyHLuCJWrUnBqCWGhgXzWt6OJDCPX1Nn0fqWhUqxu8AXUw9MEctIf7DEgzhz-2OmVwfa0258ck3zUcHCdX9hp5nrLZWINQbNcupM_XBD");'></div>
-    <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-8" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCxD2rp5kft3XQVtzpQCWZQk0V7p9pUEDP-mom4WTdDYv1f_tCJd2Tky5-VU47D6KlyjyJdN61JUf3fMGWTNZKY0G9Fdq4ZaR5TVCF9hV0EBfAMLi3Xxe2nSnhlUHPR1RIAuSrF0MS0m-y7BREWf85lZZBCG7ZGLsqA3SB6AW13y2g8cd3Mvq7s9WDWRRCWHtemBGOI_O08EpZnF_2gFJcJwTM4NXWeKgZPMhypNbO8oUGt5scLIWUpLksXPwEOsgbnh1lfq7tb0XH1");'></div>
-    <button aria-label="Add participant" class="size-8 rounded-full border border-dashed border-gray-400 text-gray-500 hover:bg-gray-100 flex items-center justify-center">
-    <svg fill="currentColor" height="16px" viewBox="0 0 256 256" width="16px" xmlns="http://www.w3.org/2000/svg">
-    <path d="M224,128a8,8,0,0,1-8,8H136v80a8,8,0,0,1-16,0V136H40a8,8,0,0,1,0-16h80V40a8,8,0,0,1,16,0v80h80A8,8,0,0,1,224,128Z"></path>
-    </svg>
-    </button>
+    <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBTIedPNaaUHa-Mz2LYSqtbfZ7bWG7jBxjMqdnjZbkXXDnnRqJJ0ybFxJLFQmHqNBoQTSLZmuhjR7Gf6R7_D8TDJNmvXaqZ8B4FZfD2ZhoJM_Eg2b44XMCP9YjObpAecKnjbteR_ZkefWAzYw3wrj6jEVQC-HpSf-GhwaR9Nm7kEnAwIR0Bx_mKSFD1bxtqdH5GvwnrPK41DRd0V_qZP9ZR-zPSrXi1a-807jO65NSesDOhL8dUJbSHqjJi13k89FJKLTyb7GiOw5Yl");'></div>
+    <p class="text-gray-700 font-semibold">Sophia</p>
     </div>
     </header>
     <div class="flex-1 space-y-4 overflow-y-auto pr-2">
     <div class="flex items-start gap-3">
-    <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-8 flex-shrink-0" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAZK5BqXFj0XIURJWAmDy_DWNO-od3fd2_ZIWLhaCjL10rekD6v8FrOfJ8armJdZF4Xr8ypXnJjeTavcTLuq3y19tmtKC7iVdiTKn0ORMuUkHZAbe5mAYmlUyuUXDt1Dh90ce5vvcb4dNM6I6KFkkQYJNWP2ttK4anGs68znyHLuCJWrUnBqCWGhgXzWt6OJDCPX1Nn0fqWhUqxu8AXUw9MEctIf7DEgzhz-2OmVwfa0258ck3zUcHCdX9hp5nrLZWINQbNcupM_XBD");'></div>
+    <div class="bg-blue-500 p-2 rounded-full flex-shrink-0">
+    <svg class="text-white size-6" fill="currentColor" height="24px" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
+    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-13h2v2h-2zm0 4h2v6h-2z"></path>
+    </svg>
+    </div>
     <div>
     <div class="chat-bubble-received p-3 rounded-lg rounded-tl-none max-w-xs lg:max-w-md">
-    <p class="text-sm">Hey team, let's finalize the Q3 roadmap. What are the top priorities?</p>
+    <p class="text-sm">Hi Sophia! How can I help you organize your tasks and goals today?</p>
     </div>
-    <p class="text-xs text-gray-400 mt-1">Mark - 10:30 AM</p>
+    <p class="text-xs text-gray-400 mt-1">AI Assistant - 9:00 AM</p>
     </div>
     </div>
     <div class="flex items-start gap-3 justify-end">
     <div>
     <div class="chat-bubble-sent p-3 rounded-lg rounded-br-none max-w-xs lg:max-w-md">
-    <p class="text-sm">I think launching the new mobile app should be P1. Followed by user onboarding improvements.</p>
+    <p class="text-sm">Hi! I need to plan my week. Can you help me list my top priorities?</p>
     </div>
-    <p class="text-xs text-gray-400 mt-1 text-right">Sophia - 10:32 AM</p>
+    <p class="text-xs text-gray-400 mt-1 text-right">Sophia - 9:01 AM</p>
     </div>
     <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-8 flex-shrink-0" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBTIedPNaaUHa-Mz2LYSqtbfZ7bWG7jBxjMqdnjZbkXXDnnRqJJ0ybFxJLFQmHqNBoQTSLZmuhjR7Gf6R7_D8TDJNmvXaqZ8B4FZfD2ZhoJM_Eg2b44XMCP9YjObpAecKnjbteR_ZkefWAzYw3wrj6jEVQC-HpSf-GhwaR9Nm7kEnAwIR0Bx_mKSFD1bxtqdH5GvwnrPK41DRd0V_qZP9ZR-zPSrXi1a-807jO65NSesDOhL8dUJbSHqjJi13k89FJKLTyb7GiOw5Yl");'></div>
     </div>
     <div class="flex items-start gap-3">
-    <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-8 flex-shrink-0" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCxD2rp5kft3XQVtzpQCWZQk0V7p9pUEDP-mom4WTdDYv1f_tCJd2Tky5-VU47D6KlyjyJdN61JUf3fMGWTNZKY0G9Fdq4ZaR5TVCF9hV0EBfAMLi3Xxe2nSnhlUHPR1RIAuSrF0MS0m-y7BREWf85lZZBCG7ZGLsqA3SB6AW13y2g8cd3Mvq7s9WDWRRCWHtemBGOI_O08EpZnF_2gFJcJwTM4NXWeKgZPMhypNbO8oUGt5scLIWUpLksXPwEOsgbnh1lfq7tb0XH1");'></div>
+    <div class="bg-blue-500 p-2 rounded-full flex-shrink-0">
+    <svg class="text-white size-6" fill="currentColor" height="24px" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
+    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-13h2v2h-2zm0 4h2v6h-2z"></path>
+    </svg>
+    </div>
     <div>
     <div class="chat-bubble-received p-3 rounded-lg rounded-tl-none max-w-xs lg:max-w-md">
-    <p class="text-sm">Agreed. We also need to allocate resources for improving server performance.</p>
+    <p class="text-sm">Certainly! Based on your upcoming deadlines and project goals, I suggest focusing on:
+    <br/>1. Finalizing the presentation for the client meeting on Wednesday.
+    <br/>2. Completing the first draft of the Q4 budget report.
+    <br/>3. Scheduling a follow-up with the design team regarding the new UI mockups.
+    <br/>Would you like me to add these as tasks for you?</p>
     </div>
-    <p class="text-xs text-gray-400 mt-1">Jane - 10:35 AM</p>
+    <p class="text-xs text-gray-400 mt-1">AI Assistant - 9:03 AM</p>
     </div>
     </div>
     <div class="flex items-start gap-3 justify-end">
     <div>
     <div class="chat-bubble-sent p-3 rounded-lg rounded-br-none max-w-xs lg:max-w-md">
-    <p class="text-sm">Good point, Jane. I've added "Server Infrastructure Upgrade" to our Goals list. Let's discuss resource allocation on Friday.</p>
+    <p class="text-sm">Yes, please. And can you also remind me to send a follow-up email to John about the project proposal by EOD tomorrow?</p>
     </div>
-    <p class="text-xs text-gray-400 mt-1 text-right">Sophia - 10:38 AM</p>
+    <p class="text-xs text-gray-400 mt-1 text-right">Sophia - 9:05 AM</p>
     </div>
     <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-8 flex-shrink-0" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBTIedPNaaUHa-Mz2LYSqtbfZ7bWG7jBxjMqdnjZbkXXDnnRqJJ0ybFxJLFQmHqNBoQTSLZmuhjR7Gf6R7_D8TDJNmvXaqZ8B4FZfD2ZhoJM_Eg2b44XMCP9YjObpAecKnjbteR_ZkefWAzYw3wrj6jEVQC-HpSf-GhwaR9Nm7kEnAwIR0Bx_mKSFD1bxtqdH5GvwnrPK41DRd0V_qZP9ZR-zPSrXi1a-807jO65NSesDOhL8dUJbSHqjJi13k89FJKLTyb7GiOw5Yl");'></div>
+    </div>
+    <div class="flex items-start gap-3">
+    <div class="bg-blue-500 p-2 rounded-full flex-shrink-0">
+    <svg class="text-white size-6" fill="currentColor" height="24px" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
+    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-13h2v2h-2zm0 4h2v6h-2z"></path>
+    </svg>
+    </div>
+    <div>
+    <div class="chat-bubble-received p-3 rounded-lg rounded-tl-none max-w-xs lg:max-w-md">
+    <p class="text-sm">Done! I've added those tasks to your list and set a reminder for the follow-up email. Is there anything else I can assist you with?</p>
+    </div>
+    <p class="text-xs text-gray-400 mt-1">AI Assistant - 9:06 AM</p>
+    </div>
     </div>
     </div>
     <div class="mt-auto pt-4 border-t border-gray-200">
     <div class="flex items-center gap-2">
-    <input class="flex-1 px-4 py-2.5 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 text-sm" placeholder="Type your message..." type="text"/>
+    <input class="flex-1 px-4 py-2.5 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 text-sm" placeholder="Ask the AI assistant..." type="text"/>
     <button aria-label="Send message" class="p-2.5 rounded-lg bg-[#0c7ff2] text-white hover:bg-blue-700 transition-colors">
     <svg fill="currentColor" height="20px" viewBox="0 0 256 256" width="20px" xmlns="http://www.w3.org/2000/svg">
     <path d="M231.93,115.05l-168-96.19a16,16,0,0,0-23.1,3.11,15.89,15.89,0,0,0-1.17,20L58.34,128,39.66,213.9a16,16,0,0,0,19.68,19.68A15.89,15.89,0,0,0,64,233l168-96.19a16,16,0,0,0,0-21.76ZM80,216a.14.14,0,0,1-.16,0L61.1,144H176a8,8,0,0,0,0-16H61.1L79.81,40a.14.14,0,0,1,.16,0l136,77.82Z"></path>
     </svg>
     </button>
     <button aria-label="Attach file" class="p-2.5 rounded-lg border border-gray-300 text-gray-600 hover:bg-gray-100 transition-colors">
-    <svg fill="currentColor" height="20px" viewBox="0 0 256 256" width="20px" xmlns="http://www.w3.org/2000/svg">
-    <path d="M170.34,164.66L136,200V40a8,8,0,0,0-16,0V200L85.66,164.66a8,8,0,0,0-11.32,11.32l48,48A8,8,0,0,0,128,224a8,8,0,0,0,5.66-2.34l48-48a8,8,0,0,0-11.32-11.32ZM200,104a8,8,0,0,0-8,8v88a8,8,0,0,0,16,0V112A8,8,0,0,0,200,104Z"></path>
+    <svg fill="currentColor" height="20px" viewBox="0 0 24 24" width="20px" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5S13.5 3.62 13.5 5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"></path>
     </svg>
     </button>
     </div>
     </div>
     </div>
     <aside class="w-80 border-l border-gray-200 p-6 flex flex-col bg-gray-50">
-    <h2 class="text-gray-800 text-xl font-semibold mb-4">Current Goals</h2>
+    <h2 class="text-gray-800 text-xl font-semibold mb-4">Today's Goals</h2>
     <div class="space-y-3 overflow-y-auto flex-1 pr-1">
     <div class="p-4 bg-white rounded-lg border border-gray-200 shadow-sm">
     <div class="flex justify-between items-start mb-1">
-    <h3 class="text-sm font-semibold text-gray-800">Launch New Mobile App (Q3)</h3>
+    <h3 class="text-sm font-semibold text-gray-800">Finalize Client Presentation</h3>
     <button aria-label="Goal options" class="text-gray-400 hover:text-gray-600">
     <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
     <path d="M10 6a2 2 0 110-4 2 2 0 010 4zM10 12a2 2 0 110-4 2 2 0 010 4zM10 18a2 2 0 110-4 2 2 0 010 4z"></path>
     </svg>
     </button>
     </div>
-    <p class="text-xs text-gray-500 mb-2">Target: End of September</p>
+    <p class="text-xs text-gray-500 mb-2">Due: Wednesday</p>
     <div class="flex items-center gap-2">
-    <div class="w-full h-2 rounded-full progress-bar-bg overflow-hidden">
-    <div class="h-full rounded-full progress-bar-fill" style="width: 60%;"></div>
-    </div>
-    <span class="text-gray-700 text-xs font-medium">60%</span>
+    <input class="form-checkbox h-4 w-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500" type="checkbox"/>
+    <label class="text-sm text-gray-700">Mark as complete</label>
     </div>
     </div>
     <div class="p-4 bg-white rounded-lg border border-gray-200 shadow-sm">
     <div class="flex justify-between items-start mb-1">
-    <h3 class="text-sm font-semibold text-gray-800">Improve User Onboarding Flow</h3>
+    <h3 class="text-sm font-semibold text-gray-800">Draft Q4 Budget Report</h3>
     <button aria-label="Goal options" class="text-gray-400 hover:text-gray-600">
     <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
     <path d="M10 6a2 2 0 110-4 2 2 0 010 4zM10 12a2 2 0 110-4 2 2 0 010 4zM10 18a2 2 0 110-4 2 2 0 010 4z"></path>
     </svg>
     </button>
     </div>
-    <p class="text-xs text-gray-500 mb-2">Target: Mid-October</p>
+    <p class="text-xs text-gray-500 mb-2">Due: Friday</p>
     <div class="flex items-center gap-2">
-    <div class="w-full h-2 rounded-full progress-bar-bg overflow-hidden">
-    <div class="h-full rounded-full progress-bar-fill" style="width: 35%;"></div>
-    </div>
-    <span class="text-gray-700 text-xs font-medium">35%</span>
+    <input class="form-checkbox h-4 w-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500" type="checkbox"/>
+    <label class="text-sm text-gray-700">Mark as complete</label>
     </div>
     </div>
     <div class="p-4 bg-white rounded-lg border border-gray-200 shadow-sm">
     <div class="flex justify-between items-start mb-1">
-    <h3 class="text-sm font-semibold text-gray-800">Server Infrastructure Upgrade</h3>
+    <h3 class="text-sm font-semibold text-gray-800">Follow up with Design Team</h3>
     <button aria-label="Goal options" class="text-gray-400 hover:text-gray-600">
     <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
     <path d="M10 6a2 2 0 110-4 2 2 0 010 4zM10 12a2 2 0 110-4 2 2 0 010 4zM10 18a2 2 0 110-4 2 2 0 010 4z"></path>
     </svg>
     </button>
     </div>
-    <p class="text-xs text-gray-500 mb-2">Target: End of Q3</p>
+    <p class="text-xs text-gray-500 mb-2">Due: Today</p>
     <div class="flex items-center gap-2">
-    <div class="w-full h-2 rounded-full progress-bar-bg overflow-hidden">
-    <div class="h-full rounded-full progress-bar-fill" style="width: 10%;"></div>
-    </div>
-    <span class="text-gray-700 text-xs font-medium">10%</span>
+    <input checked="" class="form-checkbox h-4 w-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500" type="checkbox"/>
+    <label class="text-sm text-gray-700 line-through">Mark as complete</label>
     </div>
     </div>
     <div class="p-4 bg-white rounded-lg border border-gray-200 shadow-sm">
     <div class="flex justify-between items-start mb-1">
-    <h3 class="text-sm font-semibold text-gray-800">Increase Team Productivity by 15%</h3>
+    <h3 class="text-sm font-semibold text-gray-800">Send email to John (Project Proposal)</h3>
     <button aria-label="Goal options" class="text-gray-400 hover:text-gray-600">
     <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
     <path d="M10 6a2 2 0 110-4 2 2 0 010 4zM10 12a2 2 0 110-4 2 2 0 010 4zM10 18a2 2 0 110-4 2 2 0 010 4z"></path>
     </svg>
     </button>
     </div>
-    <p class="text-xs text-gray-500 mb-2">Target: Year-End</p>
+    <p class="text-xs text-gray-500 mb-2">Due: Tomorrow EOD</p>
     <div class="flex items-center gap-2">
-    <div class="w-full h-2 rounded-full progress-bar-bg overflow-hidden">
-    <div class="h-full rounded-full progress-bar-fill" style="width: 80%;"></div>
-    </div>
-    <span class="text-gray-700 text-xs font-medium">80%</span>
+    <input class="form-checkbox h-4 w-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500" type="checkbox"/>
+    <label class="text-sm text-gray-700">Mark as complete</label>
     </div>
     </div>
     </div>
@@ -251,5 +263,4 @@
     </div>
     </div>
     </div>
-    
     </body></html>
