--- a/index.html
+++ b/index.html
@@ -27,83 +27,48 @@
         .progress-bar-fill {
           background-color: #0c7ff2;
         }
-        .sidebar {
-          background-color: #f8fafc;
-        }
         .main-content {
           background-color: #ffffff;
         }
-        .nav-item.active {
-          background-color: #e0f2fe;
-          color: #0c7ff2;
+        .chat-input-transition {
+            transition: all 0.3s ease-in-out;
         }
-        .nav-item.active svg {
-          fill: #0c7ff2;
+        .chat-input-focused {
+            max-width: 80%;
+            margin-top: 0;
+            margin-bottom: 2rem;
         }
-        .nav-item:hover {
-          background-color: #f1f5f9;
+        .chat-input-initial {
+            max-width: 600px;margin-top: auto;
+            margin-bottom: auto;
+        }
+        .action-buttons button {
+            background-color: transparent;
+            border: 1px solid #e5e7eb;
+            color: #4b5563;
+        }
+        .action-buttons button:hover {
+            background-color: #f9fafb;
         }
       </style>
     </head>
-    <body class="bg-gray-100" style='font-family: Manrope, "Noto Sans", sans-serif;'>
+    <body class="bg-gray-50" style='font-family: Manrope, "Noto Sans", sans-serif;'>
     <div class="relative flex size-full min-h-screen flex-col group/design-root overflow-x-hidden">
     <div class="layout-container flex h-full grow flex-col">
-    <div class="flex flex-1">
-    <aside class="sidebar flex flex-col w-72 border-r border-gray-200 p-4">
-    <div class="flex items-center gap-3 p-2 mb-4">
+    <main class="main-content flex-1 flex flex-col overflow-hidden items-center justify-center p-6 lg:p-8">
+    <div class="text-center mb-12 chat-input-transition chat-input-initial" id="initial-console">
+    <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-20 mx-auto mb-6" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCiqhaEbgAl_Eveyp2HVjiOrv_Sw0-2ie-0_yghDgWgw3UUZUnqi-xcVKGjFGqDKLqM2o5z294rcdjfZSnbZTSkT5ga1gnS_OAnQy4ow9TlYoIxOM9k5evKvnk2ZhfIRW-uBOGIQkqQd0_ttWcCpOdrzQT2FVm12JJoqDJjD_q6hbyb2HzPS38UqrSbn195QpZrxKFSWW3pCX8Xa64CmvHuEm1A0FXb6ChOKdNa2uzBkRdruiaUpn2s-MygdJKjWtuplT_PTNJAgi6d");'></div>
+    <h1 class="text-gray-800 text-4xl font-bold mb-2">Good Morning!</h1>
+    <p class="text-gray-600 text-lg mb-8">What marvelous plans shall we conjure today?</p>
+    </div>
+    <div class="w-full flex-1 flex flex-col max-w-3xl mx-auto hidden" id="chat-interface">
+    <header class="my-6 flex items-center justify-between">
+    <div class="flex items-center gap-3">
     <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBTIedPNaaUHa-Mz2LYSqtbfZ7bWG7jBxjMqdnjZbkXXDnnRqJJ0ybFxJLFQmHqNBoQTSLZmuhjR7Gf6R7_D8TDJNmvXaqZ8B4FZfD2ZhoJM_Eg2b44XMCP9YjObpAecKnjbteR_ZkefWAzYw3wrj6jEVQC-HpSf-GhwaR9Nm7kEnAwIR0Bx_mKSFD1bxtqdH5GvwnrPK41DRd0V_qZP9ZR-zPSrXi1a-807jO65NSesDOhL8dUJbSHqjJi13k89FJKLTyb7GiOw5Yl");'></div>
-    <h1 class="text-gray-800 text-base font-semibold">Sophia</h1>
-    </div>
-    <nav class="flex flex-col gap-2 flex-1">
-    <a class="nav-item active flex items-center gap-3 px-3 py-2.5 rounded-lg text-gray-700 hover:bg-gray-100" href="#">
-    <div class="text-gray-700" data-icon="House" data-size="20px" data-weight="fill">
-    <svg fill="currentColor" height="20px" viewBox="0 0 256 256" width="20px" xmlns="http://www.w3.org/2000/svg">
-    <path d="M218.83,103.77l-80-75.48a1.14,1.14,0,0,0-.11-.11,16,16,0,0,0-21.53,0l-.11.11L37.17,103.77A16,16,0,0,0,32,115.55V208a16,16,0,0,0,16,16H88a16,16,0,0,0,16-16V168a8,8,0,0,1,8-8h40a8,8,0,0,1,8,8v40a16,16,0,0,0,16,16h40a16,16,0,0,0,16-16V115.55A16,16,0,0,0,218.83,103.77ZM208,208H176V168a24,24,0,0,0-24-24H104a24,24,0,0,0-24,24v40H48V115.55l80-75.48,80,75.48Z"></path>
-    </svg>
-    </div>
-    <p class="text-sm font-medium">Home</p>
-    </a>
-    <a class="nav-item flex items-center gap-3 px-3 py-2.5 rounded-lg text-gray-700 hover:bg-gray-100" href="#">
-    <div class="text-gray-600" data-icon="ListBullets" data-size="20px" data-weight="regular">
-    <svg fill="currentColor" height="20px" viewBox="0 0 256 256" width="20px" xmlns="http://www.w3.org/2000/svg">
-    <path d="M80,64a8,8,0,0,1,8-8H216a8,8,0,0,1,0,16H88A8,8,0,0,1,80,64Zm136,56H88a8,8,0,0,0,0,16H216a8,8,0,0,0,0-16Zm0,64H88a8,8,0,0,0,0,16H216a8,8,0,0,0,0-16ZM44,52A12,12,0,1,0,56,64,12,12,0,0,0,44,52Zm0,64a12,12,0,1,0,12,12A12,12,0,0,0,44,116Zm0,64a12,12,0,1,0,12,12A12,12,0,0,0,44,180Z"></path>
-    </svg>
-    </div>
-    <p class="text-sm font-medium">My Tasks</p>
-    </a>
-    </nav>
-    <div class="mt-auto space-y-2">
-    <button class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-gray-700 hover:bg-gray-100 w-full">
-    <div class="text-gray-600" data-icon="Gear" data-size="20px" data-weight="regular">
-    <svg fill="currentColor" height="20px" viewBox="0 0 256 256" width="20px" xmlns="http://www.w3.org/2000/svg">
-    <path d="M128,80a48,48,0,1,0,48,48A48.05,48.05,0,0,0,128,80Zm0,80a32,32,0,1,1,32-32A32,32,0,0,1,128,160Zm88-29.84q.06-2.16,0-4.32l14.92-18.64a8,8,0,0,0,1.48-7.06,107.21,107.21,0,0,0-10.88-26.25,8,8,0,0,0-6-3.93l-23.72-2.64q-1.48-1.56-3-3L186,40.54a8,8,0,0,0-3.94-6,107.71,107.71,0,0,0-26.25-10.87,8,8,0,0,0-7.06,1.49L130.16,40Q128,40,125.84,40L107.2,25.11a8,8,0,0,0-7.06-1.48A107.6,107.6,0,0,0,73.89,34.51a8,8,0,0,0-3.93,6L67.32,64.27q-1.56,1.49-3,3L40.54,70a8,8,0,0,0-6,3.94,107.71,107.71,0,0,0-10.87,26.25,8,8,0,0,0,1.49,7.06L40,125.84Q40,128,40,130.16L25.11,148.8a8,8,0,0,0-1.48,7.06,107.21,107.21,0,0,0,10.88,26.25,8,8,0,0,0,6,3.93l23.72,2.64q1.49,1.56,3,3L70,215.46a8,8,0,0,0,3.94,6,107.71,107.71,0,0,0,26.25,10.87,8,8,0,0,0,7.06-1.49L125.84,216q2.16.06,4.32,0l18.64,14.92a8,8,0,0,0,7.06,1.48,107.21,107.21,0,0,0,26.25-10.88,8,8,0,0,0,3.93-6l2.64-23.72q1.56-1.48,3-3L215.46,186a8,8,0,0,0,6-3.94,107.71,107.71,0,0,0,10.87-26.25,8,8,0,0,0-1.49-7.06Zm-16.1-6.5a73.93,73.93,0,0,1,0,8.68,8,8,0,0,0,1.74,5.48l14.19,17.73a91.57,91.57,0,0,1-6.23,15L187,173.11a8,8,0,0,0-5.1,2.64,74.11,74.11,0,0,1-6.14,6.14,8,8,0,0,0-2.64,5.1l-2.51,22.58a91.32,91.32,0,0,1-15,6.23l-17.74-14.19a8,8,0,0,0-5-1.75h-.48a73.93,73.93,0,0,1-8.68,0,8,8,0,0,0-5.48,1.74L100.45,215.8a91.57,91.57,0,0,1-15-6.23L82.89,187a8,8,0,0,0-2.64-5.1,74.11,74.11,0,0,1-6.14-6.14,8,8,0,0,0-5.1-2.64L46.43,170.6a91.32,91.32,0,0,1-6.23-15l14.19-17.74a8,8,0,0,0,1.74-5.48,73.93,73.93,0,0,1,0-8.68,8,8,0,0,0-1.74-5.48L40.2,100.45a91.57,91.57,0,0,1,6.23-15L69,82.89a8,8,0,0,0,5.1-2.64,74.11,74.11,0,0,1,6.14-6.14A8,8,0,0,0,82.89,69L85.4,46.43a91.32,91.32,0,0,1,15-6.23l17.74,14.19a8,8,0,0,0,5.48,1.74,73.93,73.93,0,0,1,8.68,0,8,8,0,0,0,5.48-1.74L155.55,40.2a91.57,91.57,0,0,1,15,6.23L173.11,69a8,8,0,0,0,2.64,5.1,74.11,74.11,0,0,1,6.14,6.14,8,8,0,0,0,5.1,2.64l22.58,2.51a91.32,91.32,0,0,1,6.23,15l-14.19,17.74A8,8,0,0,0,199.87,123.66Z"></path>
-    </svg>
-    </div>
-    <p class="text-sm font-medium">Settings</p>
-    </button>
-    <button class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-gray-700 hover:bg-gray-100 w-full">
-    <div class="text-gray-600" data-icon="Sun" data-size="20px" data-weight="regular">
-    <svg fill="currentColor" height="20px" viewBox="0 0 256 256" width="20px" xmlns="http://www.w3.org/2000/svg">
-    <path d="M128,80a48,48,0,1,0,48,48A48.05,48.05,0,0,0,128,80Zm0,80a32,32,0,1,1,32-32A32,32,0,0,1,128,160ZM232,128A104.11,104.11,0,0,1,128,232a8,8,0,0,1,0-16,88.1,88.1,0,0,0,0-176,8,8,0,0,1,0-16A104.11,104.11,0,0,1,232,128Zm-40,40a8,8,0,0,0,5.66,2.34,8.11,8.11,0,0,0,5.65-2.34l19.8-19.8a8,8,0,0,0-11.32-11.32l-19.8,19.8A8,8,0,0,0,192,168Zm2.34-61.66L214.14,86.5a8,8,0,0,0-11.31-11.32l-19.8,19.8a8,8,0,0,0,11.31,11.32ZM128,72a8,8,0,0,0-8,8V24a8,8,0,0,0,16,0V32A8,8,0,0,0,128,72Zm0,160a8,8,0,0,0,8-8v48a8,8,0,0,0-16,0v-48A8,8,0,0,0,128,232ZM86.34,165.66a8,8,0,0,0-11.32,11.32l19.8,19.8a8,8,0,0,0,11.32-11.32ZM64,88a8,8,0,0,0,5.66-2.34l19.8-19.8a8,8,0,0,0-11.32-11.32l-19.8,19.8A8,8,0,0,0,64,88ZM72,128a8,8,0,0,0-8-8H16a8,8,0,0,0,0,16H64A8,8,0,0,0,72,128Z"></path>
-    </svg>
-    </div>
-    <p class="text-sm font-medium">Light / Dark</p>
-    </button>
-    <button class="flex w-full items-center justify-center rounded-lg h-10 px-4 bg-[#0c7ff2] text-white text-sm font-bold leading-normal tracking-[0.015em] hover:bg-blue-700 transition-colors mt-2">
-    <span class="truncate">New Goal</span>
-    </button>
-    </div>
-    </aside>
-    <main class="main-content flex-1 flex flex-col overflow-hidden">
-    <div class="flex-1 flex flex-col p-6 lg:p-8 pb-0">
-    <header class="mb-6 flex items-center justify-between">
-    <h1 class="text-gray-800 text-2xl font-bold">Home</h1>
-    <div class="flex items-center gap-2">
-    <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBTIedPNaaUHa-Mz2LYSqtbfZ7bWG7jBxjMqdnjZbkXXDnnRqJJ0ybFxJLFQmHqNBoQTSLZmuhjR7Gf6R7_D8TDJNmvXaqZ8B4FZfD2ZhoJM_Eg2b44XMCP9YjObpAecKnjbteR_ZkefWAzYw3wrj6jEVQC-HpSf-GhwaR9Nm7kEnAwIR0Bx_mKSFD1bxtqdH5GvwnrPK41DRd0V_qZP9ZR-zPSrXi1a-807jO65NSesDOhL8dUJbSHqjJi13k89FJKLTyb7GiOw5Yl");'></div>
-    <p class="text-gray-700 font-semibold">Sophia</p>
+    <h1 class="text-gray-800 text-xl font-semibold">You</h1>
     </div>
     </header>
-    <div class="flex-1 overflow-y-auto space-y-4 pr-2 mb-4 max-h-[calc(100vh-260px)]">
+    <div class="flex-1 overflow-y-auto space-y-4 pr-2 mb-4 max-h-[calc(100vh-300px)]">
     <div class="flex items-start gap-2.5">
     <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-8" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBls0-IfBnylDCJI7e0AYuoehEsEUDBM2GrIAghXX008oO5a2MlT3gb7IiWT4wZpvbCqvoXoXYCoCXHv0_8738Dk7k55mLXzb8W_BacjoNlyMkmWotD3hyNEIKipKpMl1rL18KetBE2e7soeI6EEIx_IHVpRdTigVrUeo8zbfZD_j26beokDU8WGP8GpxhKTFlJ0CK4QU3BVtS6Pxadn_cdOzhT9AExt0RvfUSP5gPF4-cvAP5D1BqFmBjI041rmNKcntvNxb5xE7c6");'></div>
     <div class="flex flex-col gap-1 w-full max-w-xl">
@@ -111,8 +76,8 @@
     <span class="text-sm font-semibold text-gray-900">Assistant</span>
     <span class="text-xs font-normal text-gray-500">11:46 AM</span>
     </div>
-    <div class="flex flex-col leading-1.5 p-4 border-gray-200 bg-blue-50 rounded-e-xl rounded-es-xl">
-    <p class="text-sm font-normal text-gray-800">Good Morning, Sophia! I'm here to help you with your tasks. Here's a quick overview of your day:</p>
+    <div class="flex flex-col leading-1.5 p-4 border-gray-200 bg-gray-100 rounded-e-xl rounded-es-xl">
+    <p class="text-sm font-normal text-gray-800">Good Morning! I'm here to help you with your tasks. Here's a quick overview of your day:</p>
     <div class="mt-3 space-y-3">
     <p class="text-sm text-gray-700">You have <span class="font-semibold text-blue-600">3 tasks</span> due today and <span class="font-semibold text-orange-500">1 upcoming deadline</span> this week.</p>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
@@ -161,7 +126,7 @@
     <div class="flex items-start gap-2.5 justify-end">
     <div class="flex flex-col gap-1 w-full max-w-xl">
     <div class="flex items-center space-x-2 rtl:space-x-reverse justify-end">
-    <span class="text-sm font-semibold text-gray-900">Sophia</span>
+    <span class="text-sm font-semibold text-gray-900">You</span>
     <span class="text-xs font-normal text-gray-500">11:47 AM</span>
     </div>
     <div class="flex flex-col leading-1.5 p-4 border-gray-200 bg-blue-600 text-white rounded-s-xl rounded-ee-xl">
@@ -177,7 +142,7 @@
     <span class="text-sm font-semibold text-gray-900">Assistant</span>
     <span class="text-xs font-normal text-gray-500">11:48 AM</span>
     </div>
-    <div class="flex flex-col leading-1.5 p-4 border-gray-200 bg-blue-50 rounded-e-xl rounded-es-xl">
+    <div class="flex flex-col leading-1.5 p-4 border-gray-200 bg-gray-100 rounded-e-xl rounded-es-xl">
     <p class="text-sm font-normal text-gray-800 mb-2">Sure! Here are your priority tasks for today:</p>
     <div class="space-y-2">
     <div class="p-3 bg-white rounded-lg border border-gray-200 shadow-sm">
@@ -193,7 +158,7 @@
     </div>
     <div class="p-3 bg-white rounded-lg border border-gray-200 shadow-sm">
     <div class="flex justify-between items-start mb-1">
-    <h3 class="text-xs font-semibold text-gray-800">Send email to John (Project Proposal)</h3>
+    <h3 class="text-xs font-semibold text-gray-800">Send email (Project Proposal)</h3>
     <span class="status-badge status-to-do !text-xs !px-2 !py-0.5">To Do</span>
     </div>
     <p class="text-xs text-gray-500 mb-1.5">Due: Tomorrow EOD</p>
@@ -221,22 +186,77 @@
     </div>
     </div>
     </div>
-    <div class="sticky bottom-0 bg-white pt-4 pb-6 px-0 border-t border-gray-200 -mx-8 mt-auto">
+    </div>
+    <div class="w-full sticky bottom-0 bg-white pt-4 pb-6 px-0 mt-auto chat-input-transition chat-input-initial" id="chat-input-container">
     <div class="max-w-3xl mx-auto w-full">
     <div class="relative">
-    <textarea class="w-full border-gray-300 rounded-lg p-4 pr-12 text-sm text-gray-700 placeholder-gray-500 focus:ring-blue-500 focus:border-blue-500 resize-none shadow-sm" placeholder="Ask Sophia anything or type a command..." rows="1" style="padding-top: 1rem; padding-bottom: 1rem; line-height: 1.5rem; min-height: 4rem; max-height: 15rem;"></textarea>
+    <textarea class="w-full border-gray-300 rounded-xl p-4 pr-12 text-sm text-gray-700 placeholder-gray-500 focus:ring-blue-500 focus:border-blue-500 resize-none shadow-lg focus:shadow-xl" id="chat-textarea" placeholder="Unleash your thoughts, or type a command..." rows="1" style="padding-top: 1.25rem; padding-bottom: 1.25rem; line-height: 1.75rem; min-height: 4.5rem; max-height: 15rem;"></textarea>
     <button class="absolute right-3 top-1/2 -translate-y-1/2 p-2 text-blue-600 rounded-full hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" type="submit">
     <svg aria-hidden="true" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
     <path d="M3.478 2.405a.75.75 0 00-.926.94l2.432 7.905H13.5a.75.75 0 010 1.5H4.984l-2.432 7.905a.75.75 0 00.926.94 60.519 60.519 0 0018.445-8.986.75.75 0 000-1.218A60.517 60.517 0 003.478 2.405z"></path>
     </svg>
     </button>
     </div>
-    <p class="text-xs text-gray-500 text-center mt-2">Sophia can make mistakes. Consider checking important information.</p>
+    <div class="mt-3 flex justify-center space-x-2 action-buttons" id="action-buttons-container">
+    <button class="px-4 py-2 text-sm font-medium rounded-lg flex items-center gap-2">
+    <svg class="bi bi-lightning-charge" fill="currentColor" height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg">
+    <path d="M11.251.068a.5.5 0 0 1 .227.58L9.677 6.5H13a.5.5 0 0 1 .364.843l-8 8.5a.5.5 0 0 1-.842-.49L6.323 9.5H3a.5.5 0 0 1-.364-.843l8-8.5a.5.5 0 0 1 .615-.09zM4.177 8.5H7.5v3.44L11.437 5H8.063L4.177 8.5z"></path>
+    </svg>
+                        Quick Actions
+                    </button>
+    <button class="px-4 py-2 text-sm font-medium rounded-lg flex items-center gap-2">
+    <svg class="bi bi-card-checklist" fill="currentColor" height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg">
+    <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2z"></path>
+    <path d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0M7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0"></path>
+    </svg>
+                        My Tasks
+                    </button>
+    <button class="px-4 py-2 text-sm font-medium rounded-lg flex items-center gap-2">
+    <svg class="bi bi-plus-circle" fill="currentColor" height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg">
+    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"></path>
+    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"></path>
+    </svg>
+                        New Goal
+                    </button>
     </div>
+    <p class="text-xs text-gray-500 text-center mt-4">Your digital assistant may occasionally offer creative interpretations. Verify critical info.</p>
     </div>
     </div>
     </main>
     </div>
     </div>
-    </div>
+    <script>
+        const chatTextarea = document.getElementById('chat-textarea');
+        const initialConsole = document.getElementById('initial-console');
+        const chatInterface = document.getElementById('chat-interface');
+        const chatInputContainer = document.getElementById('chat-input-container');
+        const actionButtonsContainer = document.getElementById('action-buttons-container');
+        chatTextarea.addEventListener('focus', () => {
+          initialConsole.classList.add('hidden');
+          chatInterface.classList.remove('hidden');
+          chatInputContainer.classList.remove('chat-input-initial');
+          chatInputContainer.classList.add('chat-input-focused');
+          actionButtonsContainer.classList.add('hidden');
+        });
+        // Optional: Add a way to revert to initial state if textarea is empty and blurred
+        chatTextarea.addEventListener('blur', () => {
+            if (chatTextarea.value === '') {
+                // Debounce or delay this to prevent flickering if user clicks send button
+                setTimeout(() => {
+                    if (document.activeElement !== chatTextarea && chatTextarea.value === '') { // Check again if focus is lost
+                        initialConsole.classList.remove('hidden');
+                        chatInterface.classList.add('hidden');
+                        chatInputContainer.classList.add('chat-input-initial');
+                        chatInputContainer.classList.remove('chat-input-focused');
+                        actionButtonsContainer.classList.remove('hidden');
+                    }
+                }, 100);
+            }
+        });
+        // Auto-resize textarea
+        chatTextarea.addEventListener('input', function() {
+            this.style.height = 'auto';
+            this.style.height = (this.scrollHeight) + 'px';
+        });
+      </script>
     </body></html>
