--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="text-center mb-12 chat-input-transition chat-input-initial" id="initial-console">
     <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-20 mx-auto mb-6" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCiqhaEbgAl_Eveyp2HVjiOrv_Sw0-2ie-0_yghDgWgw3UUZUnqi-xcVKGjFGqDKLqM2o5z294rcdjfZSnbZTSkT5ga1gnS_OAnQy4ow9TlYoIxOM9k5evKvnk2ZhfIRW-uBOGIQkqQd0_ttWcCpOdrzQT2FVm12JJoqDJjD_q6hbyb2HzPS38UqrSbn195QpZrxKFSWW3pCX8Xa64CmvHuEm1A0FXb6ChOKdNa2uzBkRdruiaUpn2s-MygdJKjWtuplT_PTNJAgi6d");'></div>
     <h1 class="text-gray-800 text-4xl font-bold mb-2">Welcome Back, Darius</h1>
-    <p class="text-gray-600 text-lg mb-8">What marvelous plans shall we conjure today?</p>
+    <p class="text-gray-600 text-lg mb-8">What impactful plans can we put together today?</p>
     </div>
     <div class="w-full flex-1 flex flex-col max-w-3xl mx-auto hidden" id="chat-interface">
     <header class="my-6 flex items-center justify-between">
