--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="layout-container flex h-full grow flex-col">
     <main class="main-content flex-1 flex flex-col overflow-hidden items-center justify-center p-6 lg:p-8">
     <div class="text-center mb-12 chat-input-transition chat-input-initial" id="initial-console">
-    <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-20 mx-auto mb-6" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCiqhaEbgAl_Eveyp2HVjiOrv_Sw0-2ie-0_yghDgWgw3UUZUnqi-xcVKGjFGqDKLqM2o5z294rcdjfZSnbZTSkT5ga1gnS_OAnQy4ow9TlYoIxOM9k5evKvnk2ZhfIRW-uBOGIQkqQd0_ttWcCpOdrzQT2FVm12JJoqDJjD_q6hbyb2HzPS38UqrSbn195QpZrxKFSWW3pCX8Xa64CmvHuEm1A0FXb6ChOKdNa2uzBkRdruiaUpn2s-MygdJKjWtuplT_PTNJAgi6d");'></div>
+    <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-20 mx-auto mb-6" style='background-image: url("/src/orcus.png");'></div>
     <h1 class="text-gray-800 text-4xl font-bold mb-2">Welcome Back, Darius</h1>
     <p class="text-gray-600 text-lg mb-8">What impactful plans can Orcus help you put together today?</p>
     </div>
