--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
     <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-20 mx-auto mb-6 relative" style="background-image: none;">
         <div 
           class="absolute inset-0 bg-[url('/src/orcus.png')] bg-cover bg-center bg-no-repeat rounded-full"
-          style="transform: rotate(65deg);"
+          style="
+            transform: rotate(65deg);
+            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.25);
+          "
         ></div>
       </div>
     </div>
