--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <div class="w-full sticky bottom-0 bg-white pt-4 pb-6 px-0 mt-auto chat-input-transition chat-input-initial" id="chat-input-container">
     <div class="max-w-3xl mx-auto w-full">
     <div class="relative">
-    <textarea class="w-full border-gray-300 rounded-xl p-4 pr-12 text-sm text-gray-700 placeholder-gray-500 focus:ring-blue-500 focus:border-blue-500 resize-none shadow-lg focus:shadow-xl" id="chat-textarea" placeholder="Unleash your thoughts, or type a command..." rows="1" style="padding-top: 1.25rem; padding-bottom: 1.25rem; line-height: 1.75rem; min-height: 4.5rem; max-height: 15rem;"></textarea>
+    <textarea class="w-full border-gray-300 rounded-xl p-4 pr-12 text-sm text-gray-700 placeholder-gray-500 focus:ring-blue-500 focus:border-blue-500 resize-none shadow-lg focus:shadow-xl" id="chat-textarea" placeholder="What impactful plans can Orcus help you put together today?" rows="1" style="padding-top: 1.25rem; padding-bottom: 1.25rem; line-height: 1.75rem; min-height: 4.5rem; max-height: 15rem;"></textarea>
     <button class="absolute right-3 top-1/2 -translate-y-1/2 p-2 text-blue-600 rounded-full hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" type="submit">
     <svg aria-hidden="true" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
     <path d="M3.478 2.405a.75.75 0 00-.926.94l2.432 7.905H13.5a.75.75 0 010 1.5H4.984l-2.432 7.905a.75.75 0 00.926.94 60.519 60.519 0 0018.445-8.986.75.75 0 000-1.218A60.517 60.517 0 003.478 2.405z"></path>
