--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
                 <div class="text-center mb-12 chat-input-transition chat-input-initial" id="initial-console">
                     <h1 class="text-gray-800 text-4xl font-bold mb-2">Welcome Back, Darius</h1>
                     <br>
-                    <br>
                     <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-20 mx-auto mb-6 relative"
                         style="background-image: none;">
                         <div class="absolute inset-0 bg-[url('/src/orcus.png')] bg-cover bg-center bg-no-repeat rounded-full"
@@ -84,6 +83,9 @@
                 box-shadow: 0 1px 40px rgba(0, 0, 0, 0.4);
               "></div>
                     </div>
+                    <p class="text-gray-600 text-lg mb-8">What impactful plans can Orcus help you put together today?</p>
+
+
                 </div>
                 <div class="w-full sticky bottom-0 bg-white pt-4 pb-6 px-0 mt-auto chat-input-transition chat-input-initial"
                     id="chat-input-container">
